# discord_notification_sender

./: Cargo.toml  README.md
src/: lib.rs  main.rs
