[package]
name = "discord_notify"
version = "0.1.0"
authors = ["Kumar Shantanu <kumarshan25@gmail.com>"]
edition = "2021"
description = "A Rust library to send notifications to Discord channels."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prettytable-rs = "^0.10"

[dev-dependencies]
mockito = "0.31"